Changes for 2.1.9

New features:
..F.I..... [ZBXNEXT-544] moved help_items data to php code (Pavels, Sasha)
..F....... [ZBXNEXT-1827] improved multiselect full text search (Eduard)
..F....... [ZBX-7065] changed the design of the setup, login and browser warning pages (Pavels)
..F....... [ZBX-6983] renamed the "Latest host group issues" screen element to "Host group issues" and "Latest host issues" to "Host issues" (Pavels)
..F....... [ZBX-7215] improved the design of the search auto suggest (Pavels)
.....J.... [ZBXNEXT-1776] added support for java.math.BigDecimal, java.math.BigInteger and some other open types (asaveljevs)
..F.I..... [ZBXNEXT-715] increased the size of sysmaps_elements.label and sysmaps_links.label fields to 2048 characters (Sasha)

Bug fixes:
...G...PS. [ZBX-7125] fixed improper reading of configuration files in case there were problems with included files; we now exit with failure (asaveljevs)
..F....... [ZBX-7257] improved config file validation (Eduard)
..F....... [ZBX-7249] changed setup pre-requisites values "yes" to "on" and "no" to "off", fixed numeric value validation and port text alignment (Pavels, Ivo)
..F....... [ZBX-7267] implement menu popup in trigger top 100 page for hosts and triggers columns (Eduard)
..F....... [ZBX-7260] fixed "Wrong RPC call to JS RPC" error when acknowledging trigger and changing group or host in screen element (Ivo)
..F....... [ZBX-6129] fixed changing the status of triggers and trigger prototype working incorrectly if they no longer exist (Pavels)
..F....... [ZBX-7266] fixed frontend big dropdowns displaying (Eduard)
..F....... [ZBX-7248] fixed frontend initial calendar time (Eduard)
.......PS. [ZBX-7208] fixed DB schema generation for "t_shorttext"-type fields (Andris, asaveljevs)
..F....... [ZBX-7240] fixed map editing form behaving incorrectly after it has been submitted unsuccessfully (Pavels)
A......... [ZBX-7256] fixed sorting by hostname in trigger.get (Pavels)